# Game

./: .gitignore  CMakeLists.txt  Makefile  README.md  logs.txt
.cache/clangd/index/: Astreoid.cpp.42F21104666A511E.idx  Astreoid.h.6D09F886ADDF719D.idx  Bullet.cpp.C29BCEAC28858215.idx  Bullet.h.A93ABA4ED05FC750.idx  Engine.cpp.86A748D2F4FEFAF9.idx  Engine.h.255A642245F9D049.idx  Entity.cpp.987991CB99C3C2B5.idx  Entity.h.C19B31EA73530D2B.idx  Game.cpp.983CE73082C54430.idx  Game.h.BD6D86E7F163E52E.idx  GameState.h.4799D8F9FFD03768.idx  InputHandler.cpp.4F77E80638EF1E6E.idx  InputHandler.h.12D29477D1D51AE7.idx  Player.cpp.3D64101955A41D35.idx  Player.h.AA4EC6CB2B2D3A2D.idx  Renderer.cpp.0269D56CED2A97C8.idx  Renderer.h.F0F01143A2A0530F.idx  StateManager.h.B98B5AAFCA7628B4.idx  main.cpp.AD57891743B64185.idx
include/: Astreoid.h  Bullet.h  Engine.h  Entity.h  Game.h  GameState.h  InputHandler.h  Logger.h  Player.h  Renderer.h  StateManager.h  game.h
src/: Astreoid.cpp  Bullet.cpp  Engine.cpp  Entity.cpp  Game.cpp  InputHandler.cpp  Logger.cpp  Player.cpp  Renderer.cpp  game.cpp  main.cpp
